Add more metadata

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html>
     <head>
         <meta charset="utf-8">
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="author" content="nottelmo">
+		<meta name="description" content="Foundations Project 01 - Google Search Page Results - The Odin Project">
+
+		<meta property="og:title" content="Foundations Project 01 - Google Search Page Results - The Odin Project">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://nottelmo.github.io/google-homepage/">
+		<!-- <meta property="or:image" content=",/og-image.png"> -->
+        
         <title>Rock Paper Scissors on Browser Console!</title>
     </head>
 
     <body>
-
+        <div></div>
     </body>
 
     <script>
