Add some body content

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     </head>
 
     <body>
-        <div></div>
+	<main style="text-align: center">
+		<h1>ROCK PAPER SCISSORS</h1>
+		<h2>Console Game</h2>
+    	</main>
     </body>
 
     <script>
